[package]
name = "whiteye"
version = "0.1.0"
authors = ["kn-shimada <xianrendaotian012@gmail.com>"]
edition = "2018"
description = "Whiteye language"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "2.20.3"
cranelift = "0.69.0"
cranelift-jit = "0.69.0"
cranelift-module = "0.69.0"
env_logger = "0.9.0"
log = "0.4.0"
nom = "6"
thiserror = "1.0.25"
